# scotia

deliver/: .gitignore  .kaptainignore  Cargo.toml  README.md  deliver.toml  kaptaind.toml
deliver/.brandi/: audience.yaml  identity.yaml  prohibited.yaml  visual.yaml  voice.yaml
deliver/man/: deliver.1
deliver/src/: cli.rs  command.rs  file_check.rs  git_check.rs  glob.rs  lib.rs  main.rs  report.rs
scotia/: .gitignore  .kaptainignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  kaptaind.toml
scotia/.github/workflows/: bench-regression.yml  ci.yml  codeql.yml  fuzz-pr.yml  fuzz-smoke.yml  installers.yml  release-sign.yml
scotia/benches/: scotia_bench.rs
scotia/deploy/: com.scotia.scotiad.plist  scotiad.service
scotia/docs/: installer-verification.md  release-signing.md
scotia/docs/strategy/: daemon-and-nova-notifications.md
scotia/fuzz/: Cargo.toml
scotia/fuzz/fuzz_targets/: fuzz_daemon_request.rs  fuzz_interceptors.rs
scotia/installer/linux/calamares/: settings.conf
scotia/installer/linux/calamares/modules/: finished.conf  license.conf  (+3 more)
scotia/installer/macos/: Distribution.xml  build-pkg.sh
scotia/installer/macos/scripts/: postinstall  postinstall-binaries  preinstall
scotia/installer/windows/: README.md  scotia.nsi
scotia/scotia.tech/: README.md  index.html  script.js  styles.css
scotia/scotia.tech/docs/: index.html
scotia/scotia.tech/downloads/: SHA256SUMS  install-scotia.sh
scotia/scotia.tech/server/: Cargo.toml
scotia/scotia.tech/server/src/: main.rs
scotia/src/: adapter.rs  algebra.rs  cli.rs  daemon.rs  event.rs  git.rs  installer.rs  interceptor.rs  ipc.rs  ipc_transport.rs  lib.rs  main.rs  normalizer.rs  notify.rs  runtime.rs  service.rs  shim.rs  storage.rs  synthesizer.rs  tui.rs  wrapper.rs
scotia/src/adapters/: agy.rs  claude.rs  codex.rs  cosine.rs  generic.rs  kimi.rs  mod.rs  opencode.rs
scotia/src/algebra/: diff.rs  graph.rs  mod.rs  regression.rs  validate.rs
scotia/src/cli/: daemon.rs  doctor.rs  query.rs  run.rs  shims.rs
scotia/src/daemon/: server.rs
scotia/src/event/: builders.rs  kind.rs  mod.rs
scotia/src/interceptors/: agy.rs  claude.rs  codex.rs  cosine.rs  kimi.rs  mod.rs  opencode.rs
scotia/src/tui/: app.rs  detect.rs  input.rs  render.rs
scotia/src/wrapper/: io.rs
scotia/tests/: algebra_test.rs  integration_test.rs  interceptor_agy_test.rs  interceptor_claude_test.rs  interceptor_codex_test.rs  interceptor_cosine_test.rs  interceptor_kimi_test.rs  interceptor_opencode_test.rs  stress_algebra.rs  stress_cli_e2e.rs  stress_interceptor_stress.rs  stress_normalizer_git.rs  stress_storage_synthesizer.rs  stress_wrapper_concurrency.rs  tui_test.rs
scotia/tests/common/: mod.rs
(+58 files in other folders)
