[package]
name = "deliver"
version = "0.1.2"
edition = "2021"
authors = ["Rory Spring-Vanhorne <rory.spring@icloud.com>"]
description = "Deterministic deliverable validator for agent workflows"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
