[package]
name = "scotia"
version = "0.1.1"
edition = "2024"
description = "Semantic Decision Ledger for agentic systems"
authors = ["Scotia Contributors"]
license = "MIT"
repository = "https://github.com/scotia/scotia"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"
git2 = "0.19"
notify-rust = { version = "4.11", optional = true }
ratatui = "0.29"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.9", features = ["v4", "serde"] }

[[bin]]
name = "scotia-shim"
path = "src/bin/scotia-shim.rs"

[[bin]]
name = "scotiad"
path = "src/bin/scotiad.rs"

[features]
default = ["notify"]
notify = ["dep:notify-rust"]

[dev-dependencies]
proptest = "1.5"
tempfile = "3.10"
tokio-test = "0.4"
