[package]
name = "scotia-tech-server"
version = "0.1.0"
edition = "2024"
description = "Static file server for scotia.tech"
authors = ["Scotia Contributors"]
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
